work in progress, refactor js use promises  etc..

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
     <input type="button" id="btn_start_quiz" value="Start Quiz">
   </div>
 
+  <div>Info:<span id="info"></span>
+  </div>
+  <div>
+    Score:<span id="score">0</span>
+  </div>
+
   <div class="quiz">
     <div class="question">
       <p id="question"></p>
@@ -73,6 +79,9 @@
   <div>
     <p id="answer_correct">Correct Answer :)</p>
     <p id="answer_wrong">Wrong Answer :(</p>
+  </div>
+  <div>
+    <input type="button" id="btn_next_question" value="Next">
   </div>
 
 
